[gd_scene load_steps=19 format=3 uid="uid://dww0l1c4gas4b"]

[ext_resource type="Script" path="res://scripts/electric_arc_red.gd" id="1_7rxmk"]
[ext_resource type="Texture2D" uid="uid://bg2r4bvxdo16u" path="res://assets/sprites/fx/spr_electric_arc_red.png" id="2_psugk"]
[ext_resource type="Script" path="res://scripts/static_body_hitbox.gd" id="3_xqykr"]
[ext_resource type="AudioStream" uid="uid://dch38lv7y4owm" path="res://assets/sfx/snd_electric_arc.wav" id="4_4bfcp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hyxsp"]
atlas = ExtResource("2_psugk")
region = Rect2(0, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_trjc2"]
atlas = ExtResource("2_psugk")
region = Rect2(8, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgeo7"]
atlas = ExtResource("2_psugk")
region = Rect2(16, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmtro"]
atlas = ExtResource("2_psugk")
region = Rect2(24, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_08cj5"]
atlas = ExtResource("2_psugk")
region = Rect2(32, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pg5e"]
atlas = ExtResource("2_psugk")
region = Rect2(40, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_1k3su"]
atlas = ExtResource("2_psugk")
region = Rect2(48, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7c7k"]
atlas = ExtResource("2_psugk")
region = Rect2(56, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_bq035"]
atlas = ExtResource("2_psugk")
region = Rect2(64, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxxg7"]
atlas = ExtResource("2_psugk")
region = Rect2(72, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xj5u"]
atlas = ExtResource("2_psugk")
region = Rect2(80, 0, 8, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_4bec0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyxsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trjc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgeo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmtro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08cj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pg5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1k3su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7c7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bq035")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxxg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xj5u")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jhxad"]
size = Vector2(6, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ahvi"]
size = Vector2(8, 40)

[node name="ElectricArcRed" type="StaticBody2D"]
collision_mask = 0
script = ExtResource("1_7rxmk")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4bec0")
autoplay = "default"
frame = 2
frame_progress = 0.398103

[node name="WallCollider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jhxad")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("3_xqykr")

[node name="Hitbox" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_7ahvi")

[node name="ElectricSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4bfcp")
bus = &"SFX"

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
